--- a/book.bib
+++ b/book.bib
@@ -673,17 +673,17 @@ publisher={University of Prince Edward Island}
   publisher={IEEE}
 }
 
-
-@article{friedman2014there,
-  title={“There are decades where nothing happens; and there are weeks where decades happen”--Vladimir Ilyich Lenin},
-  author={Friedman, Scott L},
-  journal={Journal of Hepatology},
-  volume={60},
-  number={3},
-  pages={471--472},
-  year={2014},
-  publisher={Elsevier}
+@book{vanwestrum1908devil,
+  author       = {Van Westrum, Adriaan Schade},
+  title        = {The Devil},
+  year         = {1908},
+  publisher    = {M.A. Donohue},
+  address      = {Chicago},
+  note         = {Founded on Ferenc Molnar's play, as produced by Harrison Grey Fiske at the Belasco Theatre, New York},
+  url          = {https://archive.org/details/thedevil00vanwiala/thedevil00vanwiala},
+  language     = {English}
 }
+
 
 @misc{ai2019high,
   title={High-level expert group on artificial intelligence},
